--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -630,10 +630,10 @@
 
                                     <ul class="footer-info">
                                         <li lang="en" >
-                                            <a href="#contact" lang="en" class="position-relative d-inline-block mb-2">Support</a>
+                                            <a href="#contact" lang="en" class="position-relative d-inline-block mb-2">Join Pickslot</a>
                                         </li>
                                         <li lang="gr" >
-                                            <a href="#contact" lang="gr" class="position-relative d-inline-block mb-2">Υποστήριξη</a>
+                                            <a href="#contact" lang="gr" class="position-relative d-inline-block mb-2">Γίνε συνεργάτης</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -676,10 +676,10 @@
                                         </li>
                                         <li class="d-inline-block">
                                             <a class="youtube-color text-center pr-15 d-inline-block transition-3" href="#"><i class="fab fa-youtube"></i></a>
-                                        </li> -->
+                                        </li> 
                                         <li class="d-inline-block">
                                             <a class="instagram-color text-center d-inline-block transition-3" href="https://www.linkedin.com/company/pickslot/"><i class="fab fa-linkedin-in"></i></a>
-                                        </li>
+                                        </li> -->
                                     </ul><!-- social-link -->
                                 </div>
                             </div><!-- /col -->
@@ -693,7 +693,7 @@
                                 <div class="col-xl-12  col-lg-12  col-md-12  col-sm-12 col-12">
                                     <div class="copyright-text text-center text-lg-left mb-15">
                                         <p class="mb-0 secondary-color2">All rights reserved 
-                                            <a href="https://pickslot.io" class="c-theme f-700 black-color">Pickslot</a>  ©  2023
+                                            <a href="https://pickslot.io" class="c-theme f-700 black-color">Pickslot</a>  ©  2024
                                         </p>
                                     </div>
                                 </div><!-- /col -->
