--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -520,7 +520,7 @@
                                             <div class="contact-text">
                                                 <h4 class="f-700 mb-2">Email</h4>
                                                 <p class="mb-0">
-                                                    <a class="secondary-color2 primary-hover d-block" href="#">support@pickslot.io</a>
+                                                    <a class="secondary-color2 primary-hover d-block" href="#">support@pickslot.gr</a>
                                                 </p>
                                             </div>
                                         </li><!-- /contact-email -->
@@ -652,7 +652,7 @@
                                        
                                         <li>
                                             <span class="f-icon mr-20 mt-1"><i class="far fa-envelope"></i></span>
-                                            support@pickslot.io
+                                            support@pickslot.gr
                                         </li>
                                     </ul>
                                     <ul lang="en" class="footer-address">
@@ -664,7 +664,7 @@
                                         </li>
                                         <li>
                                             <span class="f-icon mr-20 mt-1"><i class="far fa-envelope"></i></span>
-                                            support@pickslot.io
+                                            support@pickslot.gr
                                         </li>
                                     </ul>
                                     <ul class="social-link mt-15">
@@ -693,7 +693,7 @@
                                 <div class="col-xl-12  col-lg-12  col-md-12  col-sm-12 col-12">
                                     <div class="copyright-text text-center text-lg-left mb-15">
                                         <p class="mb-0 secondary-color2">All rights reserved 
-                                            <a href="https://pickslot.io" class="c-theme f-700 black-color">Pickslot</a>  ©  2024
+                                            <a href="https://pickslot.gr" class="c-theme f-700 black-color">Pickslot</a>  ©  2024
                                         </p>
                                     </div>
                                 </div><!-- /col -->
