--- a/main-files/index.html
+++ b/main-files/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Pickslot | Your appointment buddy</title>
+        <title>Pickslot | Your appointment hub</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico in the root directory -->
@@ -44,7 +44,7 @@
      
         <!--  ====== header-area-start=======================================  -->
         <header>
-            <div id="header-sticky" class="transparent-header home3 header-area  pt-20">
+            <div id="header-sticky" class="transparent-header home3 header-area  pt-20 d-none d-lg-block">
                 <div class="header">
                     <div class="container">
                         <div class="row align-items-center justify-content-between position-relative">
@@ -101,7 +101,7 @@
         <!--  ====== header extra info start================================== -->
         <!-- side-mobile-menu start -->
 
-        <div class="side-mobile-menu white-bg pt-10 pb-30 pl-35 pr-30 pb-100">
+        <div class="side-mobile-menu white-bg pt-10 pb-30 pl-35 pr-30 pb-100 d-none d-lg-block">
             <div class="w-100">
                 <div class="close-icon d-inline-block float-right clear-both mt-15 mb-10">
                     <a href="javascript:void(0);"><span class="icon-clear theme-color"><i class="fa fa-times"></i></span></a>
@@ -341,7 +341,7 @@
         </div>
 
         <!-- All js here -->
-        <script src='https://www.google.com/recaptcha/api.js?render=6Lc-HgIlAAAAAJEz7X6-MJ5phpjj802CQ4NqBwSL'></script>
+        <!-- <script src='https://www.google.com/recaptcha/api.js?render=6Lc-HgIlAAAAAJEz7X6-MJ5phpjj802CQ4NqBwSL'></script>  -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="js/vendor/jquery-1.12.4.min.js"></script>
         <script src="js/popper.min.js"></script>
