fix scroll problem and height

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -186,7 +186,7 @@
 
 
         <!-- ====== service-area-start ==================================== -->
-        <div class="service-area home2 mt-110 border-bottom ">
+        <div id="basicContainer" class="service-area home2 mt-110 border-bottom ">
             <div class="container">
 
                 <div class="row align-items-center justify-content-center">
