--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -520,7 +520,7 @@
                                             <div class="contact-text">
                                                 <h4 class="f-700 mb-2">Email</h4>
                                                 <p class="mb-0">
-                                                    <a class="secondary-color2 primary-hover d-block" href="#">support@pickslot.gr</a>
+                                                    <a class="secondary-color2 primary-hover d-block" href="#">contact@pickslot.gr</a>
                                                 </p>
                                             </div>
                                         </li><!-- /contact-email -->
@@ -652,7 +652,7 @@
                                        
                                         <li>
                                             <span class="f-icon mr-20 mt-1"><i class="far fa-envelope"></i></span>
-                                            support@pickslot.gr
+                                            contact@pickslot.gr
                                         </li>
                                     </ul>
                                     <ul lang="en" class="footer-address">
@@ -664,7 +664,7 @@
                                         </li>
                                         <li>
                                             <span class="f-icon mr-20 mt-1"><i class="far fa-envelope"></i></span>
-                                            support@pickslot.gr
+                                            contact@pickslot.gr
                                         </li>
                                     </ul>
                                     <ul class="social-link mt-15">
