make forms send data to our backend

--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -539,7 +539,7 @@
                                             <p class="mb-20" lang="gr">Θέλεις να μάθεις περισσότερα; Γράψε μας και εμείς θα έρθουμε άμεσα σε επικοινωνία</p>
 
                                         </div><!-- /title -->
-                                        <form action="php/mail.php" method="POST" id="contact-form">
+                                        <form action="https://pickslot-backend.azurewebsites.net/emailApi/sendEmail" method="POST" id="contact-form">
                                             <div class="contact-info text-md-center text-lg-left pt-20">
 
                                                 <div class="row">
