--- a/main-files/delete_request.html
+++ b/main-files/delete_request.html
@@ -228,7 +228,7 @@
                                             <p class="mb-20" lang="gr">Στείλε μας το αίτημα και ο λογαριασμός μαζί με τα σχετικά δεδομένα θα διαγραφούν διά παντώς</p>
 
                                         </div><!-- /title -->
-                                        <form action="php/mail.php" method="POST" id="contact-form">
+                                        <form action="https://pickslot-backend.azurewebsites.net/emailApi/sendEmail" method="POST" id="contact-form">
                                             <div class="contact-info text-md-center text-lg-left pt-20">
 
                                                 <div class="row">
