a minor change in title

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Pickslot | Your appointment hub</title>
-        <meta name="description" content="">
+        <title>Pickslot | Discover, book, experience</title>
+        <meta name="description" content="Ανακάλυψε τα πιο  hot μαγαζιά και κάνε κρατήσεις εύκολα και γρήγορα">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico in the root directory -->
         <link rel="shortcut icon" href="images/logo/favicon.png" type="image/x-icon">
