--- a/main-files/index.html
+++ b/main-files/index.html
@@ -207,6 +207,16 @@
             <div class="footer-area home2 primary-bg pt-800  d-none d-lg-block">
                 <div class="footer-top pb-15">
                     <div class="container">
+                        <div class="row">
+                            <div class="download-logo pt-30 pb-10" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="150">
+                                <!-- <a href="#" class=" d-inline-block">
+                                    <img src="images/logo/home5-app-store-logo.jpg" alt="image">
+                                </a> -->
+                                <a href="https://play.google.com/store/apps/details?id=io.pickslot.marketplace&hl=en_US" class=" d-inline-block">
+                                    <img src="images/logo/home5-google-paly.jpg" alt="image">
+                                </a>
+                            </div><!-- /download-logo -->
+                        </div>
                         <div class="row " >
                             <!-- /col -->
                             <div class="col-xl-4 col-lg-4  col-md-4  col-sm-4 col-12">
@@ -245,6 +255,7 @@
                                     </ul>
                                 </div>
                             </div><!-- /col -->
+                            
                             <div class="col-xl-4  col-lg-4  col-md-4  col-sm-4 col-4 ">
                                 <div class="footer-widget f-adress pb-10 mt-25">
                                     <h6 lang="en" class="text-capitalize f-700 mb-22">Get in Touch</h6>
