--- a/main-files/index.html
+++ b/main-files/index.html
@@ -124,7 +124,7 @@
                     <a class="google-plus-color text-center pr-15 d-inline-block transition-3" href="#"><i class="fab fa-google-plus-g"></i></a>
                 </li>
                 <li class="d-inline-block">
-                    <a class="linked-in-color text-center d-inline-block transition-3" href="https://www.linkedin.com/company/pickslot/"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="linked-in-color text-center d-inline-block transition-3" href="https://www.linkedin.com/company/pickslot/"><i class="fab fa-instagram"></i></a>
                 </li>-->
             </ul><!-- social-link -->
 
@@ -275,18 +275,18 @@
                                         </li>
                                     </ul>
                                     <ul class="social-link mt-15">
-                                        <!-- <li class="d-inline-block">
-                                            <a class="facebook-color text-center pr-15 d-inline-block transition-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        </li>
                                         <li class="d-inline-block">
+                                            <a class="facebook-color text-center pr-15 d-inline-block transition-3" href="https://www.facebook.com/profile.php?id=61558770972853&locale=el_GR"><i class="fab fa-facebook-f"></i></a>
+                                        </li>
+                                        <!--<li class="d-inline-block">
                                             <a class="twitter-color text-center pr-15 d-inline-block transition-3" href="#"><i class="fab fa-twitter"></i></a>
                                         </li>
                                         <li class="d-inline-block">
                                             <a class="youtube-color text-center pr-15 d-inline-block transition-3" href="#"><i class="fab fa-youtube"></i></a>
-                                        </li>
-                                        <li class="d-inline-block">
-                                            <a class="instagram-color text-center d-inline-block transition-3" href="https://www.linkedin.com/company/pickslot/"><i class="fab fa-linkedin-in"></i></a>
                                         </li>-->
+                                        <li class="d-inline-block">
+                                            <a class="instagram-color text-center d-inline-block transition-3" href="https://www.instagram.com/pickslotapp/"><i class="fab fa-instagram"></i></a>
+                                        </li>
                                     </ul><!-- social-link -->
                                 </div>
                             </div><!-- /col -->
