More descriptive content for merchants

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Pickslot | Discover, book, experience</title>
+        <title>Pickslot | Discover, book, experience. Όλες οι online κρατήσεις και ραντεβού σε μία εφαρμογή/title>
         <meta name="description" content="Ανακάλυψε τα πιο  hot μαγαζιά και κάνε κρατήσεις εύκολα και γρήγορα">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico in the root directory -->
