--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -316,6 +316,8 @@
                             <h4 class="f-700 pb-30" lang="gr">Ξεκίνα να δέχεσαι ραντεβού τώρα</h4>
                             <h4 class="f-700 pb-30" lang="en">Start offering 24/7 appointments now</h4>
 
+                            <p class="pb-10" lang="gr">Έχεις Beach Bar, εστιατόριο είτε δραστηριοποιείσαι στον χώρο της ομορφιάς? Έχεις μια επιχείρηση που κάνεις κρατήσεις και ψάχνεις ένα τρόπο να διαχειρίζεσαι εύκολα και αποτελεσματικά τις κρατήσεις σου? Θέλεις να απευθυνθείς σε περισσότερους πελάτες και ψάχνεις τρόπους προβολής και προώθησης των κρατήσεων που κάνεις? Έλα σε εμάς! </p>
+                            <p class="pb-10" lang="en">Do you have a cool restaurant, or a beauty store and want to have an efficient way to manage your reservations? Come to Pickslot!</p>
                         </div><!-- /title -->
                     </div><!-- /col -->
                 </div><!-- /row -->
