Fix a critical mistake in index which led to bad html syntax. Better team content

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8">S
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Pickslot | Discover, book, experience. Όλες οι online κρατήσεις και ραντεβού σε μία εφαρμογή/title>
+        <title>Pickslot | Discover, book, experience. Όλες οι online κρατήσεις και ραντεβού σε μία εφαρμογή</title>
         <meta name="description" content="Ανακάλυψε τα πιο  hot μαγαζιά και κάνε κρατήσεις εύκολα και γρήγορα">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico in the root directory -->
@@ -226,10 +226,10 @@
 
                                     <ul class="footer-info">
                                         <li lang="en" >
-                                            <a href="#contact" class="position-relative d-inline-block mb-2">Team</a>
+                                            <a href="team.html" class="position-relative d-inline-block mb-2">Team</a>
                                         </li>
                                         <li lang="gr" >
-                                            <a href="#contact" class="position-relative d-inline-block mb-2">Ποιοί είμαστε</a>
+                                            <a href="team.html" class="position-relative d-inline-block mb-2">Ποιοί είμαστε</a>
                                         </li>
                                         <li lang="en" >
                                             <a href="policy.html" class="position-relative d-inline-block mb-2">Privacy Policy</a>
