--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -606,10 +606,10 @@
 
                                     <ul class="footer-info">
                                         <li lang="en" >
-                                            <a href="#contact" class="position-relative d-inline-block mb-2">Team</a>
+                                            <a href="team.html" class="position-relative d-inline-block mb-2">Team</a>
                                         </li>
                                         <li lang="gr" >
-                                            <a href="#contact" class="position-relative d-inline-block mb-2">Ποιοί είμαστε</a>
+                                            <a href="team.html" class="position-relative d-inline-block mb-2">Ποιοί είμαστε</a>
                                         </li>
                                         <li lang="en" >
                                             <a href="policy.html" class="position-relative d-inline-block mb-2">Privacy Policy</a>
