--- a/main-files/team.html
+++ b/main-files/team.html
@@ -49,74 +49,17 @@
                     <div class="container">
                         <div class="row align-items-center justify-content-between position-relative">
                             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-5 col-6">
-                                <div class="logo">
+                                <div class="logo pt-22 pb-22" >
                                     <a href="index.html" class="d-inline-block"><img src="images/logo/logo.png" alt="Evalo"></a>
                                 </div>
                             </div><!-- /col -->
-                            <div class="col-xl-10 col-lg-10 col-md-1 col-sm-1 col-1 d-none d-lg-flex justify-content-end position-static">
-                                <div class="main-menu">
-                                    <nav id="mobile-menu">
-                                        <ul class="d-block">
-                                            <li class="full-mega-menu-position"><a class="active" href="index.html"><span lang="en">Home</span><span lang="gr">Αρχική</span></a></li>
-                                            <li><a href="#calendar"><span lang="en">Calendar</span><span lang="gr">Αντζέντα</span></a></li>
-                                            <li><a href="#bot">Chat Bot</a></li>
-                                            <li><a href="#start"><span lang="en">Get started</span><span lang="gr">Χρήση</span></a></li>
-                                            <li><a href="#contact"><span lang="en">Contact form</span><span lang="gr">Επικοινωνία</span></a></li>
-                                         </ul>
-                                    </nav>
-                                </div><!-- /main-menu -->
-                                   <!-- <div class="mobile-menu"></div> -->
-                                   <div class="header-right d-flex align-items-center justify-content-end">
-                                    <div class="my-btn pl-30 pr-30 d-none d-sm-block">
-                                        <a href="#contact" class="btn transparent-bg text-capitalize"><span lang="en">I am merchant</span><span lang="gr">Για επιχειρήσεις</span></a>
+                            <div class="header-right d-flex align-items-center justify-content-end">
+                                <div id="switch-lang" class="grab "><span lang="en">Ελληνικά</span><span lang="gr">English</span></div>
+                                <div id="switch-lang" class="arrow down"></div>
+                            </div>
 
-                                    </div><!-- /my-btn -->
-                                    <div id="switch-lang" class="grab "><span lang="en">Ελληνικά</span><span lang="gr">English</span></div>
-                                    <div id="switch-lang" class="arrow down"></div>
-
- <!--                                    <div   class="language-area d-none d-xl-inline-block">
-                                        <ul>
-                                            <li id="flags_menu" class="position-relative transition-3">
-                                                <a href="#" class="language d-inline-block text-uppercase d-flex align-items-center black-color f-500">
-                                                    En<span class="pl-1"><i class="fal fa-angle-down"></i></span>
-                                                </a>
-                                                <ul class="show-language z-index1 position-absolute mt-15 pt-3 pb-10 px-4 white-bg">
-                                                    <li id="en-lang" >
-                                                        <a href="#">
-                                                            <span class="grab"  class="pr-2 d-inline-block">
-                                                                <img src="images/menu/flags/eng-flag.png" alt="image">
-                                                            </span>
-                                                            English
-                                                        </a>
-                                                    </li>
-                                                    <li id="gr-lang" >
-                                                        <a href="#">
-                                                            <span   class="grab"  class="pr-2 d-inline-block">
-                                                                <img src="images/menu/flags/gr-flag.png" alt="image">
-                                                            </span>
-                                                            Ελληνικά
-                                                        </a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </div> -->
-                                    <!-- /language -->
-
-
-
-                                </div><!-- /header-right -->
-                            </div><!-- /col -->
-                            <div class="col-xl-2 col-lg-2 col-md-8 col-sm-6 col-5 d-lg-none">
-                                <div class="header-right d-flex align-items-center justify-content-end">
-                                    <div class="my-btn d-none d-sm-block">
-                                        <a href="#contact" class="btn transparent-bg text-capitalize">I am merchant</a>
-                                    </div><!-- /my-btn -->
-                                    <div class="d-block d-lg-none pl-20">
-                                        <a class="mobile-menubar theme-color" href="javascript:void(0);"><i class="far fa-bars"></i></a>
-                                    </div>
-                                </div><!-- /header-right -->
-                            </div><!-- /col -->
+                            <!-- /col -->
+    
                         </div><!-- /row -->
                     </div><!-- /container -->
                 </div>
@@ -189,22 +132,32 @@
 
                                 <h1 hidden>Pickslot appointments</h1>
 
-                                <h1 class="f-700 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="en">Who we are</h1>
-                                <h1 class="f-700 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="gr">Ποιοι είμαστε</h1>
+                                <h1 class="f-700 pb-22 pt-160 pr-0" lang="en">Who we are</h1>
+                                <h1 class="f-700 pb-22 pt-160 pr-0"  lang="gr">Ποιοι είμαστε</h1>
 
                                 <p data-aos="fade-right" data-aos-duration="2000" lang="en">
-                                    We are a team of passionate tech and marketing people, with a belief that the technology can bring a better tomorrow and a desire to bring all reservations in a single application.
+                                    We are a team originating from the field of computer science, with over ten years of experience in software development.
+                                    <br><br>
+                                    Pickslot is a project that started from a simple, everyday event: It was Saturday night and one of us needed a haircut. However, the barbershop was closed, so he had to wait until Tuesday to speak to his barber and book his appointment. When Tuesday finally came and the shop opened, he called to make his reservation. However, the barber's schedule was already full. The earliest availability for him was the following week...
+                                    <br><br>
+                                    Recently, we decided to explore new paths and enter the world of innovation. We started by developing solutions for beach bars and restaurants, and we are expanding our range of services to include hair salons, spas, and personal trainers.
+                                    <br><br>
+                                    Our goal is one: To offer an application that covers all reservations, combining technology with the needs of businesses and their customers in a simple, integrated environment. 
                                 </p>
+                                    <h5 class="f-700 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="en">All reservations in a single application.</h5>
 
                                 <p data-aos="fade-right" data-aos-duration="2000" lang="gr">
-                                    Είμαστε μια ομάδα από τη Θεσσαλονίκη, προερχόμενοι από τον χώρο της πληροφορικής, με πάνω από δέκα χρόνια εμπειρίας στην κατασκευή λογισμικού που ξεκινάμε φέτος το ταξίδι στον χώρο της καινοτομίας.
+                                    Είμαστε μια ομάδα από τη Θεσσαλονίκη, προερχόμενη από τον τομέα της πληροφορικής, με πάνω από δέκα χρόνια εμπειρία στην κατασκευή λογισμικού. 
                                     <br><br>
-                                    Το Pickslot  είναι ένα εγχείρημα που ξεκίνησε από ένα απλό, καθημερινό συμβάν: Ήτανε Σάββατο βράδυ και σκεφτήκε ένας από εμάς πως πρέπει να κουρευτεί. Έπρεπε να περιμένει μέχρι την Τρίτη για να μιλήσει με τον κουρέα του. Όταν τηλεφώνησε τελικα την Τρίτη, το μαγαζί ήταν ήδη γεμάτο. Η συντομότερη διαθεσιμότητα που υπήρχε γι αυτόν ήταν τελικά την επόμενη βδομάδα…. 
+                                    Το Pickslot  είναι ένα εγχείρημα που ξεκίνησε από ένα απλό, καθημερινό συμβάν: Ήτανε Σάββατο βράδυ και ένας από εμάς έπρεπε να κουρευτεί. Το κομμωτήριο όμως ήταν κλειστό οπότε και έπρεπε να περιμένει μέχρι την Τρίτη για να μιλήσει με τον κουρέα του και να κλείσει το ραντεβού του. Όταν τελικά έφτασε η Τρίτη και το κατάστημα άνοιξε, τηλεφώνησε ώστε να πραγματοποιήσει την κράτησή του. Το πρόγραμμα του κομμωτηρίου όμως ήταν ήδη γεμάτο. Η συντομότερη διαθεσιμότητα που υπήρχε γι αυτόν ήταν τελικά την επόμενη βδομάδα…. 
                                     <br><br>
-                                    Ξεκινήσαμε με Beach Bars και Εστιατόρια. Επεκτεινόμαστε σε Κομμωτήρια, Spa, Personal Trainers, ακόμα και σε ΚΤΕΟ. 
+                                    Πρόσφατα αποφασίσαμε να εξερευνήσουμε νέα μονοπάτια και να εισέλθουμε στον κόσμο της καινοτομίας. Ξεκινήσαμε με την ανάπτυξη λύσεων για beach bars και εστιατόρια, και επεκτείνουμε το φάσμα των υπηρεσιών μας και στα κομμωτήρια, spa και personal trainers. 
                                     <br><br>
-                                    Στόχος μας είναι ένας: Όλες οι κρατήσεις, σε μία εφαρμογή.                                </p>
-        
+                                    Ο στόχος μας είναι ένας: Να προσφέρουμε μία εφαρμογή που θα καλύπτει όλες τις κρατήσεις, ενώνοντας την τεχνολογία με τις ανάγκες των επιχειρήσεων και των πελατών τους σε ένα απλό, ολοκληρωμένο περιβάλλον.
+                                    <br><br>
+                                </p>
+                                <h5 class="f-700 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="gr">Όλες οι κρατήσεις, σε μία εφαρμογή.</h5>
+
 
                             </div>
                         </div><!-- /col -->
