Fix the s letter. Better SEO related content

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
     <head>
-        <meta charset="utf-8">S
+        <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Pickslot | Discover, book, experience. Όλες οι online κρατήσεις και ραντεβού σε μία εφαρμογή</title>
+        <title>Pickslot | Discover, book, experience. Βρες τα καλύτερα beach bars, εστιατόρια, κομμωτήρια και κλείσε το επόμενη σου θέση! Κατέβασε την εφαρμογή σε Andoid και iOS. Όλες οι online κρατήσεις και ραντεβού σου σε μία εφαρμογή</title>
         <meta name="description" content="Ανακάλυψε τα πιο  hot μαγαζιά και κάνε κρατήσεις εύκολα και γρήγορα">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico in the root directory -->
