--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Pickslot | Appointment hub. All online reservations in a single application. </title>
+        <title>Pickslot | Discover, book experience. Online κρατήσεις για beach bars, εστιατόρια, κομμωτήρια, personal trainers. Διαχειρίσου τα ραντεβού και τις κρατήσεις σου μέσα από το Pickslot. Διαχείριση κρατήσεων, πελατών και ενημερώσεις. </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico in the root directory -->
@@ -188,7 +188,8 @@
                         <div class="col-xl-6  col-lg-6  col-md-6  col-sm-12 col-12  d-flex align-items-center">
                             <div class="slider-content position-relative z-index11">
 
-                                <h1 hidden>Pickslot appointments</h1>
+                                <h1 hidden>Κρατήσεις στο Pickslot. Διαχειρίζεσαι beach bar, εστιατόριο, κομμωτήριο, μπαρμπέρικο? Είσαι personal trainer? Τώρα μπορείς να προσφέρεις online κρατήσεις για τις υπηρεσίες του καταστήματός σου </h1>
+                                <h2 hidden>Καταχώρησε την επιχείρησή σου και έλα στο Pickslot! Εύκολες και γρήγορες κρατήσεις και ραντεβού. Pickslot, όλες οι κρατήσεις σου σε μία εφαρμογή.</h2>
 
                                 <h1 class="f-700 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="en">Book Now</h1>
                                 <h1 class="f-700 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="gr">Πρόσφερε κρατήσεις 24/7</h1>
