--- a/main-files/team.html
+++ b/main-files/team.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Pickslot | Appointment hub. All online reservations in a single application. </title>
+        <title>Pickslot | Discover, book, experience. All online reservations in a single application. Κάνε κράτηση για ξαπλώστρα, ομπρέλα, τραπέζι, χτένισμα, κούρεμα ή την προπόνησή σου τώρα  </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico in the root directory -->
@@ -130,7 +130,7 @@
                         <div class="col-xl-6  col-lg-6  col-md-6  col-sm-12 col-12  d-flex align-items-center">
                             <div class="slider-content position-relative z-index11">
 
-                                <h1 hidden>Pickslot appointments</h1>
+                                <h1 hidden>Pickslot team. Η ομάδα του Picsklot. Online κρατήσεις για beach bars, εστιατόρια, κομμωτήρια και μπαρμπέρικα</h1>
 
                                 <h1 class="f-700 pb-22 pt-160 pr-0" lang="en">Who we are</h1>
                                 <h1 class="f-700 pb-22 pt-160 pr-0"  lang="gr">Ποιοι είμαστε</h1>
