Better how we started text

--- a/main-files/team.html
+++ b/main-files/team.html
@@ -149,7 +149,9 @@
                                 <p data-aos="fade-right" data-aos-duration="2000" lang="gr">
                                     Είμαστε μια ομάδα από τη Θεσσαλονίκη, προερχόμενη από τον τομέα της πληροφορικής, με πάνω από δέκα χρόνια εμπειρία στην κατασκευή λογισμικού. 
                                     <br><br>
-                                    Το Pickslot  είναι ένα εγχείρημα που ξεκίνησε από ένα απλό, καθημερινό συμβάν: Ήτανε Σάββατο βράδυ και ένας από εμάς έπρεπε να κουρευτεί. Το κομμωτήριο όμως ήταν κλειστό οπότε και έπρεπε να περιμένει μέχρι την Τρίτη για να μιλήσει με τον κουρέα του και να κλείσει το ραντεβού του. Όταν τελικά έφτασε η Τρίτη και το κατάστημα άνοιξε, τηλεφώνησε ώστε να πραγματοποιήσει την κράτησή του. Το πρόγραμμα του κομμωτηρίου όμως ήταν ήδη γεμάτο. Η συντομότερη διαθεσιμότητα που υπήρχε γι αυτόν ήταν τελικά την επόμενη βδομάδα…. 
+                                    Είναι Σάββατο βράδυ, έχεις κανονίσει να βγείς. Κοιτάζεσαι στον καθρέφτη πριν φύγεις και παρατηρείς ότι χρειάζεσαι κούρεμα. Πρέπει να κλείσεις ραντεβού, το κομμωτήριο που πηγαίνεις όμως είναι κλειστό. Περνάει η Κυριακή. Η Δευτέρα. Φτάνει η Τρίτη. Παίρνεις τηλέφωνο. Μετά από λίγο ο κομμωτής σου το σηκώνει. Αφού πείτε κάποια τυπικά, ρωτάς αν έχει σήμερα διαθεσιμότητα. Η επόμενη διαθεσιμότητα που σε βολεύει είναι την Τετάρτη. Όχι αυτή, την επόμενη.
+                                    <br><br>
+                                    Αυτή είναι μια πραγματική ιστορία που συνέβη σε έναν από εμάς. Ήταν ο τέλειος λόγος να ξεκινήσουμε το <b>Pickslot</b>.
                                     <br><br>
                                     Πρόσφατα αποφασίσαμε να εξερευνήσουμε νέα μονοπάτια και να εισέλθουμε στον κόσμο της καινοτομίας. Ξεκινήσαμε με την ανάπτυξη λύσεων για beach bars και εστιατόρια, και επεκτείνουμε το φάσμα των υπηρεσιών μας και στα κομμωτήρια, spa και personal trainers. 
                                     <br><br>
