change instagram to pickslotgr

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -285,7 +285,7 @@
                                             <a class="youtube-color text-center pr-15 d-inline-block transition-3" href="#"><i class="fab fa-youtube"></i></a>
                                         </li>-->
                                         <li class="d-inline-block">
-                                            <a class="instagram-color text-center d-inline-block transition-3" href="https://www.instagram.com/pickslotapp/"><i class="fab fa-instagram"></i></a>
+                                            <a class="instagram-color text-center d-inline-block transition-3" href="https://www.instagram.com/pickslotgr/"><i class="fab fa-instagram"></i></a>
                                         </li>
                                     </ul><!-- social-link -->
                                 </div>
