--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -457,6 +457,7 @@
             </div><!-- /container -->
         </div>
         <!-- service-area-end  -->
+        <!-- service-area-end  -->
 
             <div id="contact" class="contact-area mb-165 mt-155">
                 <div class="contact-wrapper position-relative">
@@ -638,7 +639,7 @@
                                             <a class="youtube-color text-center pr-15 d-inline-block transition-3" href="#"><i class="fab fa-youtube"></i></a>
                                         </li>-->
                                         <li class="d-inline-block">
-                                            <a class="instagram-color text-center d-inline-block transition-3" href="https://www.instagram.com/pickslotapp/"><i class="fab fa-instagram"></i></a>
+                                            <a class="instagram-color text-center d-inline-block transition-3" href="https://www.instagram.com/pickslotgr/"><i class="fab fa-instagram"></i></a>
                                         </li>
                                     </ul>
                                 </div>
